// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translator initialize renders 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
        validationState={null}
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={20}
          value=""
        />
        <FormControlFeedback
          bsClass="form-control-feedback"
          bsRole="feedback"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={true}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={20}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator input data updates state when input data is invalid 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
        validationState="error"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={20}
          value="abc"
        />
        <FormControlFeedback
          bsClass="form-control-feedback"
          bsRole="feedback"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={true}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={20}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator input data updates state when input data is valid 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
        validationState="success"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={20}
          value="{\\"some\\": \\"json\\"}"
        />
        <FormControlFeedback
          bsClass="form-control-feedback"
          bsRole="feedback"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={20}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;

exports[`Translator translate data updates state with translation result 1`] = `
<Grid
  bsClass="container"
  className="App-grid"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    className="show-grid"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="jsonTextArea"
        validationState="success"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          onChange={[Function]}
          placeholder="Paste json data here..."
          rows={20}
          value="valid data"
        />
        <FormControlFeedback
          bsClass="form-control-feedback"
          bsRole="feedback"
        />
      </FormGroup>
    </Col>
    <Col
      bsClass="col"
      className="App-convert"
      componentClass="div"
      md={2}
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Translate
      </Button>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={5}
    >
      <FormGroup
        bsClass="form-group"
        controlId="swaggerTextArea"
      >
        <FormControl
          bsClass="form-control"
          className="App-textarea"
          componentClass="textarea"
          readOnly={true}
          rows={20}
          value=""
        />
      </FormGroup>
    </Col>
  </Row>
</Grid>
`;
